--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@portabletext/react": "^3.0.4",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@sanity/image-url": "^1.0.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "add": "^2.0.6",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.13.0",
+    "framer-motion-carousel": "^2.0.3",
     "next": "13.4.12",
     "next-sanity": "^5.1.2",
     "postcss": "8.4.27",
