--- a/package.json
+++ b/package.json
@@ -12,23 +12,28 @@
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.4",
     "@ramonak/react-progress-bar": "^5.0.3",
+    "@sanity/vision": "^3.14.3",
     "@sanity/image-url": "^1.0.2",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "add": "^2.0.6",
-    "autoprefixer": "10.4.14",
+    "sanity": "^3.14.3",
+    "styled-components": "^5.3.9",
     "framer-motion": "^10.13.0",
     "framer-motion-carousel": "^2.0.3",
     "next": "13.4.12",
     "next-sanity": "^5.1.2",
-    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
-    "tailwind-scrollbar": "^3.0.4",
+    "tailwind-scrollbar": "^3.0.4"
+  },
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.4",
+    "@types/node": "20.4.4",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.27",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
