--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.4",
     "@ramonak/react-progress-bar": "^5.0.3",
-    "@sanity/vision": "^3.14.3",
     "@sanity/image-url": "^1.0.2",
-    "sanity": "^3.14.3",
-    "styled-components": "^5.3.9",
+    "@sanity/vision": "^3.14.3",
+    "axios": "^1.4.0",
     "framer-motion": "^10.13.0",
     "framer-motion-carousel": "^2.0.3",
     "next": "13.4.12",
     "next-sanity": "^5.1.2",
+    "nextjs-current-url": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "sanity": "^3.14.3",
+    "styled-components": "^5.3.9",
     "tailwind-scrollbar": "^3.0.4"
   },
   "devDependencies": {
